refactor: change colors

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,10 +20,10 @@ font_size		14.0
 #	main theme
 #-----------------
 
-background		#0e0e0e
-foreground		#e4e4e4
+background		#323437
+foreground		#d1d0c5
 
-cursor			#e4e4e4
+cursor			#d1d0c5
 cursor_shape		block
 
 term 			xterm-256color
