refactor: change colors

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -3,8 +3,9 @@
 #------------------------*/
 
 [colors]
-background = #0e0e0e
-foreground = #e4e4e4
+background = #323437
+background-alt = #55585e
+foreground = #d1d0c5
 
 alert = #d75f5f
 
@@ -104,13 +105,10 @@ label-empty = "by lazy"
 type = internal/bspwm
 pin-workspaces = true
 
-label-focused-background = ${colors.foreground}
-label-focused-padding = 2
+label-focused-background = ${colors.background-alt}
+label-focused-padding-right = 1
 
-label-occupied-padding = 2
-
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-occupied-padding-right = 1
 
 label-empty =
  
